# TTS_Course

02_front_end/2-1_word_seg/: README.md
02_front_end/2-1_word_seg/scripts/: 1_prepare_train.py  2_prepare_test.py
02_front_end/2-2_g2p/: README.md  acc.py  reference.txt
02_front_end/2-2_g2p/dataset/: gt.dict  gtRnnlm.dict  mini-train.dict  test.dict  testRnnlm.dict
03_spss/: README.md  data_reader.py  hparam.py  model.py  prepare.py  requirements.txt  synthesize.py  train.py  utils.py
03_spss/bash/: prepare.sh  synthesize_acoustic.sh  synthesize_dur.sh  train_acoustic.sh  train_dur.sh
03_spss/cmvn/: train_cmvn_dur.npz  train_cmvn_spss.npz
03_spss/copy_synthesize/: copy_synthesis.sh  copy_synthesis_mel.py  copy_synthesis_world_16k.sh  copy_synthesis_world_48k.sh
03_spss/tools/: compile_tools.sh
03_spss/tools/SPTK-3.9/: COPYING  Makefile.am  Makefile.in  NEWS  README  config.status  configure  configure.ac
03_spss/tools/SPTK-3.9/script/: Makefile.am  Makefile.in  bell.in  glogsp.in  grlogsp.in  gseries.in  gwave.in  mgc2mgclsp.in  mgclsp2mgc.in  raw2wav.in  wav2raw.in
04_seq2seq_tts/: README.md
04_seq2seq_tts/tacotron/: hparams.yaml  infer.py  preprocess.py  requirements.txt  train.py
04_seq2seq_tts/tacotron/datasets/: acoustic_extractor.py  data_reader.py  label_loader.py  preprocessor.py
04_seq2seq_tts/tacotron/models/: basic_model.py  tacotron.py
04_seq2seq_tts/tacotron/modules/: attention.py  (+6 more)
05_end2end_tts/: README.md
06_nn_vocoder/: README.md
06_nn_vocoder/WaveRNN/: generate.py  requirements.txt  train.py
07_voice_cloning/: README.md
(+118 files in other folders)
